--- a/homework1/homework1.html
+++ b/homework1/homework1.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 1</title>
 </head>
+
 <body>
-    
+    <h1># Homework 1</h1>
+    <p>Write a JavaScript program that will calculate the price of 30 Phones, 
+       where the price of one phone is $119.95 and the tax rate is 5%.</p>
+    <script src="homework1.js"></script>
 </body>
+
 </html>
