--- a/homework2/homework2.html
+++ b/homework2/homework2.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control Structure -IF</title>
-    <h1># Homework 2 </h1>
 
+<body>
+    <h1># Homework 2 </h1>
     <p>
         Write javascript code that will get an input from the user and calculate which Chinese Zodiac a given year is
         in: <br>
@@ -29,6 +30,7 @@
     </p>
 
     <script src="homework2.js"></script>
+</body>
 </head>
 
 <body>
