--- a/homework7/homework7.html
+++ b/homework7/homework7.html
@@ -7,6 +7,22 @@
 </head>
 <body>
 
+    <h2>Create Table</h2>
+
+    <label>
+        Rows:
+        <input type="number" id="rows" min="1">
+    </label>
+
+    <label>
+        Columns:
+        <input type="number" id="columns" min="1">
+    </label>
+
+    <button id="createTableBtn">Create Table</button>
+
+    <div id="tableContainer"></div>
+
     
     <link rel="stylesheet" href="homework7.css">
     <script src="homework7.js"></script>
